# access-manager-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
bot/: __main__.py  manager.py  models.py  newsletter.py  states.py
bot/config/: settings.py
bot/core/: db.py  health.py  i18n.py  logger.py  menu.py  redis_client.py
bot/filters/: admin.py
bot/handlers/: channels.py  chat_member.py  check.py  join_request.py  language.py  menu.py  requirements.py  start.py
bot/handlers/admin/: broadcast.py  policy.py  users.py
bot/jobs/: broadcast_runner.py  compliance_scan.py  grace_restoration.py  grace_watcher.py  scheduler.py
bot/keyboards/inline/: admin.py  channels.py  language.py  (+2 more)
bot/middlewares/: broadcast.py  callback_throttling.py  i18n.py  logging.py  throttling.py
bot/services/: audit_service.py  broadcast_runtime.py  broadcast_storage.py  cache_service.py  compliance_service.py  membership_service.py  policy_service.py  user_service.py
bot/utils/: constants.py  misc.py  validators.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py  2025-10-08_add_channel_links.py  2025-10-08_add_channel_username_to_policy_channels.py  2025-10-08_add_preferred_language_column_to_user_.py  2025-10-09_add_created_at_to_user_profiles.py  2025-10-09_make_channel_link_required.py  2025-10-10_simplify_models_remove_revisions.py  2026-04-30_add_broadcast_state.py
tests/: test_bot_initialization.py  test_broadcast_storage.py
(+3 files in other folders)
