[project]
name = "access-manager-bot"
version = "0.1.0"
description = "Telegram gateway bot for managing channel access with compliance checks"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "sqlalchemy[asyncio]>=2.0.42",
    "asyncpg>=0.30.0",
    "redis>=6.2.0",
    "apscheduler>=3.10.0",
    "environs>=11.0.0",
    "structlog>=24.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.2",
    "aiohttp>=3.13.4",
    "cachetools>=5.3.0",
    "babel>=2.17.0",
    "aiogram-broadcast>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["N999"]  # Invalid module name — project dir uses kebab-case

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
asyncio_default_test_loop_scope = "module"
testpaths = ["tests"]
